﻿drkns 04.01.2016 14:00:46 +0200 - build 4503

1. Продолжение 4502.1.

2. Уточнение 4431.

drkns 03.01.2016 21:18:13 +0200 - build 4502

1. Продолжим рефакторинг буфера обмена.

2. clip(3) и clip(4) похоже, не работали чуть менее, чем совсем.

drkns 01.01.2016 16:05:03 +0200 - build 4501

1. Распространим 4496 и на вертикальные блоки тоже.

2. Размер данных пишем всегда.

drkns 01.01.2016 15:07:30 +0200 - build 4500

1. Убрано дублирование вертикального блока в буфере обмена.

2. Рефакторинг.

zg 31.12.2015 20:03:12 +0200 - build 4499

1. падение в GetPluginDirList. возвращалась освобождённая память.

2. gcc warning.

drkns 30.12.2015 17:05:27 +0200 - build 4498

1. Продолжение 3596. Более параноидальная работа с адаптерами.

drkns 30.12.2015 10:59:13 +0200 - build 4497

1. TinyXML-2 v3.0.0.

2. Пара мелочей.

w17 29.12.2015 13:10:24 +0300 - build 4496

1. Копирование/вставка текста содержащего символ(ы) '\0' в редакторе.
   При копировании текста в буфер обмена, если в нём содержатся нулевые символы,
   создаётся дополнительный 4-х байтовый блок, куда записывается длина текста.
   Тип блока 'Notepad++ binary text length', должен быть совместим с Paste Special notepad++.

drkns 28.12.2015 17:59:08 +0200 - build 4495

1. Каталог %farlocalproflie%\PluginsData не создавался автоматически, что могло приводить к последствиям.

drkns 28.12.2015 16:32:20 +0200 - build 4494

1. Уточнение 4493.

drkns 28.12.2015 15:28:08 +0200 - build 4493

1. Рефакторинг.

w17 27.12.2015 11:08:48 +0300 - build 4492

1. M#3142: Сломана вставка текста из борландовской IDE

drkns 25.12.2015 21:54:47 +0200

1. 0003145: New German translation

drkns 22.12.2015 09:38:41 +0200 - build 4491

1. С форума: Если открыть в редакторе приложенный файл и нажать End, FAR падает.

2. #0003143: При движении стрелками в редакторе добавляются пробелы

drkns 21.12.2015 20:25:07 +0200 - build 4490

1. Рефакторинг, продолжение 4484.

drkns 21.12.2015 08:13:52 +0200 - build 4489

1. И ещё.
