@@ -1,4 +1,8 @@
-﻿drkns 04.01.2016 14:00:46 +0200 - build 4503
+﻿drkns 08.01.2016 14:47:08 +0200 - build 4504
+
+1. Немного чёрной магии, чтобы VS2015 билд мог запускаться в Win2k.
+
+drkns 04.01.2016 14:00:46 +0200 - build 4503
 
 1. Продолжение 4502.1.
 
